<resources>
    <string name="app_name">My Toursit Tunisia</string>
    <string name="title_first_intro">Simple and Clean UI</string>
    <string name="txt_first_intro">Some text</string>
    <string name="title_second_intro">Secure</string>
    <string name="txt_second_intro">Some text</string>
    <string name="title_third_intro">Emergency</string>
    <string name="txt_third_intro">Some text</string>
    <string name="title_fourth_intro">That\'s it</string>
    <string name="txt_fourth_intro">Some text</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="txtname">Name</string>
    <string name="txttel">Tel</string>
    <string name="emeg_contacts">Your Emergency Contacts</string>
    <string name="hint_edtxtname">Entry Name</string>
    <string name="hint_edtxttel">Entry Tel</string>
    <string name="btn_add">Add</string>
    <string name="btn_update">Update</string>
    <string name="btn_all_contacts">Contacts</string>
    <string name="btn_delete">Delete</string>
    <string name="home">Home</string>
    <string name="travelpack">Travel Pack</string>
    <string name="contact">Contact</string>
    <string name="emergency">Emergency</string>
    <string name="maps">Maps</string>
    <string name="addcontact">Add New Contact</string>
    <string name="url_messengerbot">https://www.messenger.com/t/105520069525231</string>
    <string name="install_messenger">Install facebook messenger</string>
    <string name="no_internet">Thre is no internet connection</string>
    <string name="connect">Connected</string>
    <string name="close_prompt">Are you sure to close th app ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="tapAgain">Tap again to close the app</string>

</resources>
